finished stylings and found solution to fix the spacing on the pages.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,12 +35,12 @@ h2 {
 
 #top_bar {
     background-color: #ffffff;
-    margin: 0 0 30px;
+    margin: 0 0 30px 0;
     z-index: 99;
     color: #ffffff;
     overflow: auto;
     border-bottom: 2px solid #cccccc;
-    position: fixed;
+    /*position: fixed;*/
     width: 100%;
 }
 
@@ -54,7 +54,7 @@ h2 {
     line-height: 130px;
     color: #ffffff;
     font-weight: 700px;
-    font-size: 30px;
+    font-size: 38px;
     text-decoration: none;
 }
 
@@ -114,4 +114,73 @@ footer {
     text-align: center;
     position: relative;
     bottom: 0;
+}
+
+/* Portfolio Page */
+
+.projects {
+    width: 273px;
+    overflow: auto;
+    float: left;
+    margin: 20px 0 25px 0;
+    position: relative;
+}
+
+.projects:nth-child(even) {
+    margin-right: 40px;
+}
+
+.projects h3 {
+    border-bottom: 0;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-weight: 300;
+    text-align: center;
+    bottom: 20px;
+    padding: 15px;
+    width: 73.5%;
+    margin-bottom: 0;
+    line-height: 30px;
+    position: absolute;
+}
+
+
+/* contact page */
+
+#conact-form ul {
+    margin-bottom: 25px;
+}
+
+#contact-form li {
+    margin-bottom: 15px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+    display: block;
+    width: 900px;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+    height: 25px;
+    border: 1px solid #dddddd;
+    padding: 0 15px;
+    font-size: 16px;
+}
+
+textarea {
+    height: 120px;
+}
+
+input[type=submit] {
+    background-color: #4aaaa5;
+    border: 0 none;
+    color: #ffffff;
+    font-size: 16px;
+    padding: 7px 25px;
+    cursor: pointer;
 }
